# M1TERImage

Debug/: .cproject  .project  CMakeCache.txt  Makefile  cmake_install.cmake  detectionLigne
images/: 201.tif  202.tif  203.tif  206.tif  207.tif  208.tif  210.tif  211.tif  212.tif  214.tif  216.tif  217.tif  218.tif  220.tif  221.tif  225.tif  227.tif  228.tif  229.tif  234.tif  238.tif  239.tif  240.tif  248.tif  251.tif  254.tif  255.tif  256.tif  260.tif  262.tif  263.tif  265.tif  266.tif  267.tif  268.tif  271.tif  272.tif  273.tif  274.tif  275.tif  (+40 more)
images_test/: 204.tif  205.tif  209.tif  213.tif  215.tif  219.tif  222.tif  223.tif  224.tif  226.tif  230.tif  231.tif  232.tif  233.tif  235.tif  236.tif  237.tif  241.tif  242.tif  243.tif  244.tif  245.tif  246.tif  247.tif  249.tif  250.tif  252.tif  253.tif  257.tif  258.tif  259.tif  261.tif  264.tif  269.tif  270.tif  277.tif  281.tif  282.tif  287.tif  288.tif  (+30 more)
result/: 201.tif  202.tif  203.tif  204.tif  205.tif  206.tif  207.tif  208.tif  209.tif  210.tif  211.tif  212.tif  213.tif  214.tif  215.tif  216.tif  217.tif  218.tif  219.tif  220.tif  221.tif  222.tif  223.tif  224.tif  225.tif  226.tif  227.tif  228.tif  229.tif  230.tif  231.tif  232.tif  233.tif  234.tif  235.tif  236.tif  237.tif  238.tif  239.tif  240.tif  (+110 more)
src/: CMakeLists.txt  LineDetection.cpp  LineDetection.h  PreProcess.cpp  PreProcess.h  main.cpp
